[gd_scene load_steps=18 format=2]

[ext_resource path="res://Scripts/Boss.gd" type="Script" id=1]
[ext_resource path="res://sprite/invader_boss_2.png" type="Texture" id=2]
[ext_resource path="res://sprite/explosion2.png" type="Texture" id=3]
[ext_resource path="res://sprite/fire_more.png" type="Texture" id=4]
[ext_resource path="res://sfx/543690__latawoo__buttonclick1.wav" type="AudioStream" id=5]
[ext_resource path="res://sfx/256268__jmayoff__space-ship-taking-off.wav" type="AudioStream" id=6]

[sub_resource type="RectangleShape2D" id=10]
extents = Vector2( 41, 61 )

[sub_resource type="Animation" id=2]
length = 0.9
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath("explosion:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.05, 0.1, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55, 0.6, 0.65, 0.7, 0.75 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12, 13, 14, 15 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("explosion:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.8 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/2/type = "method"
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.85 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "clear"
} ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Sprite:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0.7 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Particles2D2:emitting")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[sub_resource type="Gradient" id=3]
offsets = PoolRealArray( 0, 0.571865, 1 )
colors = PoolColorArray( 1, 1, 0, 1, 1, 0, 0, 1, 1, 0, 0, 0 )

[sub_resource type="GradientTexture" id=4]
gradient = SubResource( 3 )
width = 256

[sub_resource type="Curve" id=5]
_data = [ Vector2( 0, 1 ), 0.0, -1.0, 0, 1, Vector2( 1, 0 ), -1.0, 0.0, 1, 0 ]

[sub_resource type="CurveTexture" id=6]
curve = SubResource( 5 )

[sub_resource type="Curve" id=7]
_data = [ Vector2( 0, 1 ), 0.0, 0.0, 0, 0, Vector2( 1, 1 ), 0.0, 0.0, 0, 0 ]

[sub_resource type="CurveTexture" id=8]
curve = SubResource( 7 )

[sub_resource type="ParticlesMaterial" id=9]
lifetime_randomness = 0.5
trail_size_modifier = SubResource( 8 )
flag_disable_z = true
spread = 180.0
gravity = Vector3( 0, 98, 0 )
initial_velocity = 200.0
initial_velocity_random = 1.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
angle = 720.0
angle_random = 1.0
scale = 10.0
scale_curve = SubResource( 6 )
color_ramp = SubResource( 4 )
hue_variation = -0.1
hue_variation_random = 1.0

[sub_resource type="Animation" id=11]
resource_name = "break"
length = 2.2
tracks/0/type = "value"
tracks/0/path = NodePath("ufo/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 3, 1, 2, 3, 2, 1, 1, 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("ufo/Sprite2:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 2, 1, 3, 1, 2, 1, 3, 2, 3, 1, 0 ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("ufo/Sprite3:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 2, 1, 3, 1, 2, 1, 1, 0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("ufo/Sprite4:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 2, 1, 2, 3, 2, 1, 2, 3, 1, 1, 0 ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("ufo/Sprite5:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 1, 2, 1, 2, 3, 2, 1, 1, 0 ]
}
tracks/5/type = "value"
tracks/5/path = NodePath("ufo/Sprite6:frame")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 2, 3, 2, 1, 3, 1, 2, 3, 1, 1, 0 ]
}
tracks/6/type = "value"
tracks/6/path = NodePath("AudioStreamPlayer2:playing")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/keys = {
"times": PoolRealArray( 0, 2.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/7/type = "value"
tracks/7/path = NodePath("AudioStreamPlayer2:volume_db")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/keys = {
"times": PoolRealArray( 0, 0.5, 1, 2.2 ),
"transitions": PoolRealArray( 0.5, -0.5, -2, 0.5 ),
"update": 0,
"values": [ -40.0, -10.0, -10.0, -80.0 ]
}

[sub_resource type="AudioStreamRandomPitch" id=12]
audio_stream = ExtResource( 5 )

[node name="Boss" type="Area2D" groups=[
"enemies",
]]
script = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 10 )

[node name="ufo" type="Sprite" parent="."]
modulate = Color( 1.5, 1.5, 1.5, 1 )
z_index = 1
texture = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="ufo"]
position = Vector2( -42, -38 )
texture = ExtResource( 4 )
vframes = 4

[node name="Sprite2" type="Sprite" parent="ufo"]
position = Vector2( -43, 38 )
texture = ExtResource( 4 )
vframes = 4

[node name="Sprite3" type="Sprite" parent="ufo"]
position = Vector2( -47, 12 )
texture = ExtResource( 4 )
vframes = 4

[node name="Sprite4" type="Sprite" parent="ufo"]
position = Vector2( -47, 16 )
texture = ExtResource( 4 )
vframes = 4

[node name="Sprite5" type="Sprite" parent="ufo"]
position = Vector2( -47, -16 )
texture = ExtResource( 4 )
vframes = 4

[node name="Sprite6" type="Sprite" parent="ufo"]
position = Vector2( -47, -11 )
texture = ExtResource( 4 )
vframes = 4

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5

[node name="Player" type="AnimationPlayer" parent="."]
anims/boom = SubResource( 2 )

[node name="explosion" type="Sprite" parent="."]
visible = false
scale = Vector2( 2, 2 )
texture = ExtResource( 3 )
hframes = 4
vframes = 4

[node name="Particles2D" type="Particles2D" parent="."]
emitting = false
amount = 128
lifetime = 1.8
one_shot = true
explosiveness = 1.0
process_material = SubResource( 9 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/break = SubResource( 11 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = SubResource( 12 )

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -80.0
pitch_scale = 2.0

[node name="Start_Timer" type="Timer" parent="."]

[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
[connection signal="timeout" from="Start_Timer" to="." method="_on_Start_Timer_timeout"]
